--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "docs": "https://github.com/dgrigg/craft-3-boilerplate/blob/master/README.md",
     "issues": "https://github.com/dgrigg/craft-3-boilerplate/issues"
   },
-  "minimum-stability": "dev",
+  "minimum-stability": "stable",
   "prefer-stable": true,
   "require": {
     "craftcms/cms": "^3.0.0",
