linter and js updates

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,19 @@
 {
-    "parserOptions": {
-        "ecmaVersion": 6,
-        "sourceType": "module"
-    },
-    "rules": {
-        "semi": "warn",
-        "no-global-assign": "off",
-        "no-useless-escape": "off"
+  "extends": ["airbnb", "prettier", "prettier/react"],
+  "plugins": ["prettier", "import", "dollar-sign"],
+  "rules": {
+    "no-console": "off",
+    "prettier/prettier": "error",
+    "dollar-sign/dollar-sign": [2, "ignoreProperties"]
+  },
+  "env": {
+    "browser": true
+  },
+  "settings": {
+    "import/resolver": {
+      "webpack": {
+        "config": "node_modules/laravel-mix/setup/webpack.config.js"
+      }
     }
+  }
 }
