--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "watch": "NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
     "hot": "NODE_ENV=development webpack-dev-server --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "production": "NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
+    "production": "NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
+    "lint": "eslint src -c .eslintrc.json --ext js,jsx"
   },
   "repository": {
     "type": "git",
@@ -19,15 +20,27 @@
     "url": "https://github.com/dgrigg/craft-3-boilerplate/issues"
   },
   "homepage": "https://github.com/dgrigg/craft-3-boilerplate#readme",
+  "dependencies": {
+    "jquery": "^3.3.1"
+  },
   "devDependencies": {
     "axios": "^0.18.0",
-    "eslint": "^5.8.0",
+    "eslint": "^5.12.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-config-prettier": "^3.3.0",
+    "eslint-import-resolver-webpack": "^0.10.1",
     "eslint-loader": "^2.1.1",
+    "eslint-plugin-dollar-sign": "^1.0.1",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-prettier": "^3.0.1",
+    "eslint-plugin-react": "^7.12.3",
     "eslint-plugin-vue": "^4.7.1",
-    "jquery": "^3.3.1",
     "laravel-mix": "^2.1.14",
     "laravel-mix-eslint": "^0.1.2",
     "laravel-mix-tailwind": "^0.1.0",
+    "prettier": "^1.15.3",
+    "stylelint-config-recommended": "^2.1.0",
     "tailwindcss": "^0.7.0"
   }
 }
