--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
   "name": "craft-3-boilerplate",
-  "version": "1.0.6",
+  "version": "1.0.8",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "NODE_ENV=development node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "watch": "NODE_ENV=development node_modules/webpack/bin/webpack.js --watch --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "hot": "NODE_ENV=development webpack-dev-server --inline --hot --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "production": "NODE_ENV=production node_modules/webpack/bin/webpack.js --progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js",
-    "lint": "eslint src -c .eslintrc.json --ext js,jsx"
+    "copy": "node copy.js",
+    "lint": "eslint src -c .eslintrc.json --ext js,jsx",
+    "dev": "NODE_ENV=developement webpack --config webpack.config.js --mode development",
+    "watch": "NODE_ENV=developement webpack --config webpack.config.js --watch --mode development",
+    "production": "NODE_ENV=production webpack --config webpack.config.js --mode production"
   },
   "repository": {
     "type": "git",
@@ -21,10 +21,18 @@
   },
   "homepage": "https://github.com/dgrigg/craft-3-boilerplate#readme",
   "dependencies": {
-    "jquery": "^3.3.1"
+    "@fullhuman/postcss-purgecss": "^1.2.0",
+    "autoprefixer": "^9.6.1",
+    "axios": "^0.18.0",
+    "jquery": "^3.3.1",
+    "tailwindcss": "^1.0.5"
   },
   "devDependencies": {
-    "axios": "^0.18.0",
+    "babel-cli": "^6.26.0",
+    "babel-loader": "7",
+    "babel-preset-env": "^1.7.0",
+    "clean-webpack-plugin": "^2.0.2",
+    "css-loader": "^3.1.0",
     "eslint": "^5.12.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^3.3.0",
@@ -36,11 +44,19 @@
     "eslint-plugin-prettier": "^3.0.1",
     "eslint-plugin-react": "^7.12.3",
     "eslint-plugin-vue": "^4.7.1",
-    "laravel-mix": "^2.1.14",
-    "laravel-mix-eslint": "^0.1.2",
-    "laravel-mix-tailwind": "^0.1.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "mini-css-extract-plugin": "^0.8.0",
+    "node-sass": "^4.12.0",
+    "postcss-loader": "^3.0.0",
     "prettier": "^1.15.3",
+    "sass-loader": "^7.1.0",
     "stylelint-config-recommended": "^2.1.0",
-    "tailwindcss": "^0.7.0"
+    "webpack": "^4.32.2",
+    "webpack-clean-obsolete-chunks": "^0.4.0",
+    "webpack-cli": "^3.3.2",
+    "webpack-manifest-plugin": "^2.0.4",
+    "webpack-merge": "^4.2.1",
+    "webpack-notifier": "^1.7.0",
+    "webpack-shell-plugin": "^0.5.0"
   }
 }
