--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "babel-cli": "^6.26.0",
     "babel-loader": "7",
     "babel-preset-env": "^1.7.0",
-    "clean-webpack-plugin": "^2.0.2",
+    "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^5.0.4",
     "css-loader": "^3.1.0",
     "eslint": "^5.12.0",
     "eslint-config-airbnb": "^17.1.0",
