--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "craft-3-boilerplate",
-  "version": "1.0.9",
+  "version": "1.1.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -21,43 +21,33 @@
   },
   "homepage": "https://github.com/dgrigg/craft-3-boilerplate#readme",
   "dependencies": {
-    "@fullhuman/postcss-purgecss": "^1.2.0",
+
     "autoprefixer": "^9.6.1",
     "axios": "^0.18.0",
     "jquery": "^3.3.1",
     "tailwindcss": "^1.0.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.6.0",
+    "@fullhuman/postcss-purgecss": "^1.3.0",
     "babel-cli": "^6.26.0",
-    "babel-loader": "7",
+    "babel-loader": "^8.0.6",
     "babel-preset-env": "^1.7.0",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.0.4",
-    "css-loader": "^3.1.0",
-    "eslint": "^5.12.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^3.3.0",
-    "eslint-import-resolver-webpack": "^0.10.1",
-    "eslint-loader": "^2.1.1",
-    "eslint-plugin-dollar-sign": "^1.0.1",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-react": "^7.12.3",
-    "eslint-plugin-vue": "^4.7.1",
+    "css-loader": "^3.2.0",
     "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^4.2.0",
+    "js-yaml": "^3.13.1",
     "mini-css-extract-plugin": "^0.8.0",
     "node-sass": "^4.12.0",
     "postcss-loader": "^3.0.0",
-    "prettier": "^1.15.3",
-    "sass-loader": "^7.1.0",
-    "stylelint-config-recommended": "^2.1.0",
-    "webpack": "^4.32.2",
-    "webpack-clean-obsolete-chunks": "^0.4.0",
-    "webpack-cli": "^3.3.2",
+    "sass-loader": "^8.0.0",
+    "shelljs": "^0.8.3",
+    "tailwindcss-aspect-ratio": "^2.0.0",
+    "webpack": "^4.40.2",
+    "webpack-cli": "^3.3.9",
     "webpack-manifest-plugin": "^2.0.4",
-    "webpack-merge": "^4.2.1",
-    "webpack-notifier": "^1.7.0",
-    "webpack-shell-plugin": "^0.5.0"
+    "webpack-notifier": "^1.8.0"
   }
 }
