--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "craft-3-boilerplate",
-  "version": "1.1.2",
+  "version": "1.1.3",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -21,12 +21,13 @@
   },
   "homepage": "https://github.com/dgrigg/craft-3-boilerplate#readme",
   "dependencies": {
-
     "autoprefixer": "latest",
     "axios": "^0.18.0",
-    "jquery": "^3.3.1",
+    "body-scroll-lock": "^2.6.4",
+    "jquery": "^3.4",
     "tailwindcss": "^1.0.5",
-    "tailwindcss-aspect-ratio": "^2.0.0"
+    "tailwindcss-aspect-ratio": "^2.0.0",
+    "tailwindcss-transitions": "^2.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.6.0",
