--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "dgrigg/craft-3-boilerplate",
   "description": "Craft 3 boilerplate setup, includes basic js/css/webpack setup",
-  "version": "1.1.4",
+  "version": "1.1.7",
   "authors": [
     {
       "name": "Derrick Grigg",
@@ -26,7 +26,8 @@
     "spicyweb/craft-neo": "^2.5",
     "verbb/navigation": "^1.1",
     "verbb/super-table": "^2.4",
-    "vlucas/phpdotenv": "^3.4.0"
+    "vlucas/phpdotenv": "^3.4.0",
+    "ostark/craft-plugin-commands": "^1.0"
 
   },
   "autoload": {
