--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,6 @@
   "require": {
     "craftcms/cms": "^3.4",
     "craftcms/redactor": "^2.6",
-    "dgrigg/craft-migration-assistant": "^3.1.8",
     "mmikkel/retcon": "^2.0",
     "nystudio107/craft-seomatic": "^3.3",
     "nystudio107/craft-twigpack": "^1.1",
@@ -37,9 +36,7 @@
   },
   "config": {
     "optimize-autoloader": true,
-    "platform": {
-      "php": "7.0"
-    }
+    "sort-packages": true
   },
   "scripts": {
     "post-root-package-install": [
