--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "copy": "node copy.js",
     "lint": "eslint src -c .eslintrc.json --ext js,jsx",
-    "dev": "NODE_ENV=developement webpack --config webpack.config.js --mode development",
-    "watch": "NODE_ENV=developement webpack --config webpack.config.js --watch --mode development",
-    "production": "NODE_ENV=production webpack --config webpack.config.js --mode production"
+    "dev": "mix",
+    "watch": "mix watch",
+    "hot": "mix watch --hot",
+    "production": "mix --production"
   },
   "repository": {
     "type": "git",
@@ -21,33 +22,24 @@
   },
   "homepage": "https://github.com/dgrigg/craft-3-boilerplate#readme",
   "dependencies": {
+    "alpinejs": "^2.8.2",
     "autoprefixer": "^9.8.6",
     "body-scroll-lock": "^2.6.4",
     "jquery": "^3.4",
-    "tailwindcss": "^1.8.10",
-    "tailwindcss-aspect-ratio": "^2.0.0",
-    "tailwindcss-transitions": "^2.1.0"
+    "tailwindcss": "^2.1.0",
+    "tailwindcss-aspect-ratio": "^2.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.6.0",
-    "@fullhuman/postcss-purgecss": "^1.3.0",
-    "babel-cli": "^6.26.0",
-    "babel-loader": "^8.0.6",
-    "babel-preset-env": "^1.7.0",
-    "clean-webpack-plugin": "^3.0.0",
-    "copy-webpack-plugin": "^5.0.4",
+    "clean-webpack-plugin": "^4.0.0-alpha.0",
     "css-loader": "^3.2.0",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "file-loader": "^4.2.0",
     "js-yaml": "^3.13.1",
-    "mini-css-extract-plugin": "^0.8.0",
-    "node-sass": "^4.12.0",
-    "postcss-loader": "^3.0.0",
-    "sass-loader": "^8.0.0",
-    "shelljs": "^0.8.3",
-    "webpack": "^4.40.2",
-    "webpack-cli": "^3.3.9",
-    "webpack-manifest-plugin": "^2.0.4",
-    "webpack-notifier": "^1.8.0"
+    "laravel-mix": "^6.0.18",
+    "laravel-mix-clean": "^0.1.0",
+    "laravel-mix-make-file-hash": "^2.2.0",
+    "laravel-mix-postcss-config": "^1.4.0",
+    "postcss": "^8.2.13",
+    "postcss-import": "^14.0.1",
+    "postcss-loader": "^5.0.0",
+    "postcss-nested": "^5.0.5"
   }
 }
