--- a/package.json
+++ b/package.json
@@ -22,10 +22,10 @@
   },
   "homepage": "https://github.com/dgrigg/craft-3-boilerplate#readme",
   "dependencies": {
-    "alpinejs": "^2.8.2",
+    "alpinejs": "^3.1.0",
+    "axios": "^0.21.1",
     "autoprefixer": "^9.8.6",
     "body-scroll-lock": "^2.6.4",
-    "jquery": "^3.4",
     "tailwindcss": "^2.1.0",
     "tailwindcss-aspect-ratio": "^2.0.0"
   },
@@ -41,6 +41,7 @@
     "postcss": "^8.2.13",
     "postcss-import": "^14.0.1",
     "postcss-loader": "^5.0.0",
-    "postcss-nested": "^5.0.5"
+    "postcss-nested": "^5.0.5",
+    "prettier-plugin-twig-melody": "^0.4.6"
   }
 }
