--- a/.env.example
+++ b/.env.example
@@ -23,10 +23,10 @@ DB_DATABASE=""
 DB_SCHEMA="public"
 
 # The prefix that should be added to generated table names (only necessary if multiple things are sharing the same database)
-DB_TABLE_PREFIX=""
+DB_TABLE_PREFIX="craft_"
 
 # The port to connect to the database with. Will default to 5432 for PostgreSQL and 3306 for MySQL.
 DB_PORT=""
 
 # Web site
-DEFAULT_SITE_URL="https://new-site.devbox"
+PRIMARY_SITE_URL=""
