--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "dgrigg/craft-3-boilerplate",
-  "description": "Craft 3 boilerplate setup, includes basic js/css/webpack setup",
-  "version": "1.2.9",
+  "description": "Craft 3 boilerplate setup, includes basic js/css/esbuild setup",
+  "version": "1.3.1",
   "authors": [
     {
       "name": "Derrick Grigg",
@@ -24,8 +24,7 @@
     "sebastianlenz/linkfield": "^1.0",
     "verbb/navigation": "^1.4",
     "verbb/super-table": "^2.6",
-    "vlucas/phpdotenv": "^3.4.0",
-    "ostark/craft-plugin-commands": "^1.0"
+    "vlucas/phpdotenv": "^3.4.0"
   },
   "autoload": {
     "psr-4": {
