--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "alpinejs": "^3.1.0",
     "axios": "^0.21.1",
+    "lodash": "^4.17.21",
     "tailwindcss": "^2.1.0",
     "tailwindcss-aspect-ratio": "^2.0.0"
   },
