--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "craft-3-boilerplate",
-  "version": "1.3.2",
+  "version": "1.3.4",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -33,6 +33,7 @@
     "postcss": "^8.2.14",
     "postcss-import": "^14.0.1",
     "postcss-loader": "^5.0.0",
-    "postcss-nested": "^5.0.5"
+    "postcss-nested": "^5.0.5",
+    "postcss-url": "^10.1.3"
   }
 }
