--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
-  "name": "dgrigg/craft-3-boilerplate",
-  "description": "Craft 3 boilerplate setup, includes basic js/css/esbuild setup",
+  "name": "dgrigg/craft-boilerplate",
+  "description": "Craft boilerplate setup, includes basic js/css/esbuild setup",
   "version": "1.3.4",
   "authors": [
     {
@@ -9,23 +9,24 @@
     }
   ],
   "support": {
-    "docs": "https://github.com/dgrigg/craft-3-boilerplate/blob/master/README.md",
-    "issues": "https://github.com/dgrigg/craft-3-boilerplate/issues"
+    "docs": "https://github.com/dgrigg/craft-boilerplate/blob/master/README.md",
+    "issues": "https://github.com/dgrigg/craft-boilerplate/issues"
   },
   "minimum-stability": "stable",
   "prefer-stable": true,
   "require": {
-    "craftcms/cms": "3.7.27.2",
-    "craftcms/redactor": "2.10.3",
-    "mmikkel/retcon": "2.3.0",
-    "nystudio107/craft-seomatic": "3.4.26",
-    "nystudio107/craft-twigpack": "1.2.15",
-    "putyourlightson/craft-blitz": "3.11.1",
-    "sebastianlenz/linkfield": "^1.0",
-    "topshelfcraft/wordsmith": "3.3.0.1",
-    "verbb/navigation": "1.4.24",
-    "verbb/super-table": "2.6.8",
-    "vlucas/phpdotenv": "^3.4.0"
+    "craftcms/cms": "^4.0.0",
+    "craftcms/redactor": "3.0.2",
+    "leowebguy/mix-manifest": "1.0.2",
+    "mmikkel/retcon": "2.5.0",
+    "nystudio107/craft-seomatic": "4.0.9",
+    "nystudio107/craft-twigpack": "4.0.0-beta.4",
+    "putyourlightson/craft-blitz": "4.2.2",
+    "sebastianlenz/linkfield": "2.1.4",
+    "topshelfcraft/wordsmith": "4.0.1",
+    "verbb/navigation": "2.0.6",
+    "verbb/super-table": "3.0.1",
+    "vlucas/phpdotenv": "^5.4.0"
   },
   "autoload": {
     "psr-4": {
@@ -34,7 +35,14 @@
   },
   "config": {
     "optimize-autoloader": true,
-    "sort-packages": true
+    "sort-packages": true,
+    "allow-plugins": {
+      "yiisoft/yii2-composer": true,
+      "craftcms/plugin-installer": true
+    },
+    "platform": {
+      "php": "8.0.2"
+    }
   },
   "scripts": {
     "post-root-package-install": [
