--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
   "name": "dgrigg/craft-boilerplate",
   "description": "Craft boilerplate setup, includes basic js/css/esbuild setup",
-  "version": "1.3.8",
+  "version": "1.3.9",
   "authors": [
     {
       "name": "Derrick Grigg",
@@ -15,17 +15,16 @@
   "minimum-stability": "stable",
   "prefer-stable": true,
   "require": {
-    "craftcms/cms": "^4.0.0",
-    "craftcms/redactor": "3.0.2",
-    "leowebguy/mix-manifest": "1.0.2",
-    "mmikkel/retcon": "2.5.0",
-    "nystudio107/craft-seomatic": "4.0.9",
-    "nystudio107/craft-twigpack": "4.0.0-beta.4",
-    "putyourlightson/craft-blitz": "4.2.2",
-    "sebastianlenz/linkfield": "2.1.4",
+    "craftcms/cms": "4.3.10",
+    "craftcms/redactor": "3.0.3",
+    "misterbk/mix": "^1.6",
+    "mmikkel/retcon": "2.6.1",
+    "nystudio107/craft-seomatic": "4.0.20",
+    "putyourlightson/craft-blitz": "4.4.0",
+    "sebastianlenz/linkfield": "2.1.5",
     "topshelfcraft/wordsmith": "4.0.1",
-    "verbb/navigation": "2.0.6",
-    "verbb/super-table": "3.0.1",
+    "verbb/navigation": "2.0.16",
+    "verbb/super-table": "3.0.7",
     "vlucas/phpdotenv": "^5.4.0"
   },
   "autoload": {
