--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,40 @@
-# The environment Craft is currently running in ('dev', 'staging', 'production', etc.)
-ENVIRONMENT="dev"
+# The application ID used to to uniquely store session and cache data, mutex locks, and more
+CRAFT_APP_ID=
 
-# Web site
-PRIMARY_SITE_URL=""
+# The environment Craft is currently running in ('dev', 'staging', 'production', etc.)
+CRAFT_ENVIRONMENT="dev"
+
+# The secure key Craft will use for hashing and encrypting data
+CRAFT_SECURITY_KEY=
+
+# The database driver that will be used ('mysql' or 'pgsql')
+CRAFT_DB_DRIVER=mysql
+
+# The database server name or IP address (usually this is 'localhost' or '127.0.0.1')
+CRAFT_DB_SERVER=mysql
+
+# The database username to connect with
+CRAFT_DB_USER=root
+
+# The database password to connect with
+CRAFT_DB_PASSWORD=
+
+# The name of the database to select
+CRAFT_DB_DATABASE=
+
+# The database schema that will be used (PostgreSQL only)
+CRAFT_DB_SCHEMA=
+
+# The prefix that should be added to generated table names (only necessary if multiple things are sharing the same database)
+CRAFT_DB_TABLE_PREFIX=craft_
+
+# The port to connect to the database with. Will default to 5432 for PostgreSQL and 3306 for MySQL.
+CRAFT_DB_PORT=3306
+
+PRIMARY_SITE_URL=
+
+# General settings (see config/general.php)
+CRAFT_ALLOW_SUPERUSER=1
+DEV_MODE=true
+ALLOW_ADMIN_CHANGES=true
+DISALLOW_ROBOTS=true
