--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "craft-boilerplate",
-  "version": "1.3.9",
+  "version": "1.4.0",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -23,7 +23,7 @@
     "axios": "^0.21.1",
     "lodash": "^4.17.21",
     "tailwindcss": "^3.0.0",
-    "tailwindcss-aspect-ratio": "^2.0.0"
+    "@tailwindcss/aspect-ratio": "^0.3.0"
   },
   "devDependencies": {
     "@deanc/esbuild-plugin-postcss": "^1.0.2",
